@@ -2,6 +2,15 @@
 p4a.calendar Changes
 ====================
 
+p4a.calendar (development)
+==========================
+
+Bugfixes
+--------
+
+* Fixed issue #45: events that span across several months can now be viewed
+  properly on the ending month (Rocky Burt)
+
 p4a.calendar 1.0rc1 (2007-07-31)
 ================================
 
